[package]
name = "pm"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
byteorder = "1.5.0"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.2"
image = "0.25.5"
lopdf = "0.35.0"
num = "0.4.3"
printpdf = { version = "0.7.0", features = ["embedded_images", "image"] }
regex = "1.11.1"
rfd = "0.15.3"
